# Riko

./: .gitignore  Makefile  README.md  config.py  pyproject.toml  requirements.txt  startup.py
riko/: __init__.py  __main__.py  bot.py  checks.py  emojis.py  errors.py  logger.py
riko/cogs/: eightball.py  greetings.py  prefix.py
