[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[project]
authors = [
    {name = "itzAyrun", email = "ayrun3412@gmail.com"},
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "discord<3.0.0,>=2.3.2",
    "dynaconf<4.0.0,>=3.2.6",
    "aiofiles<25.0.0,>=24.1.0",
    "toml<1.0.0,>=0.10.2",
    "cerberus>=1.3.6",
]
name = "riko"
version = "0.1.0"
description = ""
readme = "README.md"
